--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dominate==2.5.1
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
